# spice

./: .gitignore  LICENSE  README.md  appveyor.yml  documentation.md  index.html  index.md  style.css
_layouts/: default.html
client/: .gitignore  LICENSE  index.aot.html  index.html  karma-test-shim.js  karma.conf.js  main.js  package.json  prism.css  prism.js  prism_dark.css  prism_light.css  protractor.config.js  rollup.config.js  run-http-server.sh  spice.css  systemjs.config.js  tsconfig.aot.json  tsconfig.json
client-old/: .gitignore  index.html  package.json
client-old/modules/: Stream.js  filesystem-service.js  spice.js
client-old/modules/functionPicker/: functionPicker.js
client-old/modules/launcher/: launcher.js
client-old/styles/: spice.scss
client/app/: app.component.spec.ts  app.component.ts  main.aot.ts  main.ts  rxjs-extensions.ts  spice-mock-backend.ts  spice.module.ts
client/app/components/: components.module.ts  spice-root.component.spec.ts  spice-root.component.ts  spice.root.component.spec.ts  spice.root.component.ts
client/app/directives/: MatchMaxAttribute.directive.ts  MatchMaxHeight.directive.ts  ParameterFocus.directive.ts
client/app/models/: Breakpoint.ts  DebugId.ts  DebugInfo.ts  DebuggerState.spec.ts  DebuggerState.ts  Errors.ts  Execution.ts  Process.ts  SourceFile.ts  SourceFunction.ts  SourceFunctionCollection.ts  SourceFunctionId.ts  (+6 more)
client/e2e/: app.e2e-spec.ts
client/js/: spice.js
client/modules/: SpiceError.js  Stream.js  debugger-service.js  filesystem-service.js  spice.js
client/styles/: _spice-theme.scss  spice.scss  spicy-theme.scss
docs/api/: v1.md
server/: Cargo.toml
server/debug/: Cargo.toml
server/debug/examples/: attach.rs  attach_pid.rs  call.rs  enumerate.rs  function.rs  trace.rs  types.rs
server/debug/src/: call.rs  debug.rs  event.rs  lib.rs  process.rs  symbol.rs  types.rs  value.rs
server/src/: api.rs  child.rs  main.rs  serde_types.in.rs  serde_types.rs  trace.rs  value.rs
(+91 files in other folders)
