[package]
name = "server"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>", "Tarik Courdy <tarik.courdy@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[workspace]

[dependencies]
debug = { path = "debug" }
hyper = "0.9"
reroute = "0.2"
serde = "0.8"
serde_json = "0.8"
