[package]
name = "server"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>", "Tarik Courdy <tarik.courdy@gmail.com>"]
build = "build.rs"

[workspace]

[dependencies]
hyper = { version = "0.9", default-features = false }
unicase = "1.0"
reroute = { version = "0.3", default-features = false }
serde = "0.8"
serde_json = "0.8"
debug = { path = "debug" }
winapi = { git = "https://github.com/team-worm/winapi-rs" }
kernel32-sys = { git = "https://github.com/team-worm/winapi-rs" }
advapi32-sys = { git = "https://github.com/team-worm/winapi-rs" }

[build-dependencies]
serde_codegen = "0.8"
