[package]
name = "server"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>", "Tarik Courdy <tarik.courdy@gmail.com>"]

[workspace]

[dependencies]
hyper = "0.10"
unicase = "1.0"
reroute = "0.3.2"
url = "1.0"
mime_guess = "1.8"
serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9"
debug = { path = "debug" }
winapi = { git = "https://github.com/team-worm/winapi-rs" }
kernel32-sys = { git = "https://github.com/team-worm/winapi-rs" }
lazy_static = "0.2"
