[package]
name = "debug"
version = "0.1.0"
authors = ["Russell Johnston <rpjohnst@gmail.com>"]

[dependencies]
winapi = { git = "https://github.com/team-worm/winapi-rs" }
kernel32-sys = { git = "https://github.com/team-worm/winapi-rs" }
dbghelp-sys = { git = "https://github.com/team-worm/winapi-rs" }
lazy_static = "0.2"
advapi32-sys = { git = "https://github.com/team-worm/winapi-rs" }
